force-app/main/default/objects/Upload_PWA_RM_Log__c/Upload_PWA_RM_Log__c.object-meta.xml
<CustomObject>
    <description>Log from uploading PWA RM from CSV file</description>
    <label>Upload PWA RM Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Upload PWA RM Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload PWA RM Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>