force-app/main/default/objects/Upload_PWA_RM_Log__c/fields/Import_CSV_file_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_CSV_file_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Import CSV file ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>