force-app/main/default/objects/Upload_PWA_RM_Log__c/fields/Total_Fail__c.field-meta.xml
<CustomField>
    <fullName>Total_Fail__c</fullName>
    <label>Total Fail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>